# host-stirfirestudios-sdl

./: .gitmodules  build_host.rb  host-info.yml
Husky/: .gitignore  Husky.sln  README.md
Husky/Husky-Public.xcworkspace/: contents.xcworkspacedata
Husky/Husky-Public.xcworkspace/xcshareddata/: Husky-Public.xccheckout
Husky/dummy/: dll.vcxproj  dll.vcxproj.filters  main.cpp  tester.vcxproj  tester.vcxproj.filters
Husky/dummy/dummy.xcodeproj/: project.pbxproj
Husky/dummy/dummy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Husky/dummy/dummy.xcodeproj/project.xcworkspace/xcshareddata/: dummy-ios.xccheckout
Husky/dummy/src/: HuskyDummy.cpp  HuskyDummy.h
Husky/shared/: Husky.h  HuskyLoader.cpp  HuskyLoader.h
cmake/: CMakeLists.txt
moai-husky/: MOAIHusky.cpp  MOAIHusky.h
sledge/: FolderWatcher-win.cpp  SledgeCore.cpp  SledgeGraphicsHandler.cpp  SledgeHost.cpp  SledgeHost.h  SledgeInputHandler.cpp  SledgeInputManager.cpp  stdafx.h
